# dnd-roller-tutorial

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
dnd_roller/: __init__.py  dice.py  dice.py~  pytest.ini
tests/: test_dice_roll.py  test_roll.py  test_sequence_rolls.py
